[tool.poetry]
name = "psm-app"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.17.5"
huey = "^2.5.1"
bottle = "^0.12.25"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.2.2"
pyaml = "^24.4.0"
ipython = "^8.25.0"
secure = "^0.3.0"
cerberus = "^1.3.5"
gevent = "^24.2.1"
gunicorn = "^22.0.0"
loguru = "^0.7.2"
requests-cache = "^1.2.1"
shelved-cache = "^0.3.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
